--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
           </a>
         </div>
         <div class="mess">
+          <div class="item person">
+            <a href="#">
+              <img src="img/poolioptions_persno_icon.png" width="24" height="24" alt="人のアイコン">
+              オーナー様専用ページ
+            </a>
+          </div>
           <div class="item">
             <a href="#">
               施工事例
@@ -47,14 +53,14 @@
       </div>
     </header>
 
-    <div class="sidebar_sns">
+    <!-- <div class="sidebar_sns">
       <a href="https://www.instagram.com/theniwa/" target="_blank">
         <img src="img/top_sns_instagram.png" width="240" height="240" alt="">
       </a>
       <a href="https://page.line.me/?accountId=078mcrsp" target="_blank">
         <img src="img/top_sns_line.png" width="240" height="240" alt="">
       </a>
-    </div>
+    </div> -->
 
     <div class="fix_link">
       <div class="lists">
@@ -125,7 +131,7 @@
                 Reference Plans
               </span>
               <h2>
-                プールのある庭 施工事例
+                プールがあるお庭の参考施工事例
               </h2>
             </div>
             <div class="slide-wrapper">
@@ -167,14 +173,14 @@
         <div class="banner container">
           <div class="box">
             <div class="message">
-              THE庭や工房(株式会社ベルフィオーレ)はデジョユジャパン・パートナーになります。
+              THE庭や工房はグランドアートウォール正規対応店になります。
             </div>
             <div class="detail">
               <div class="text">
-                静岡県富士市ショールームを運営していますのでお気軽にご相談ください。
+                プールの施工と合わせて、プライベート空間のお手伝いもさせて頂きますのでお気軽にご相談ください。
               </div>
               <div class="logo">
-                <img src="img/pooloptions_desjoyaux_logo.png" width="211" height="105" alt="">
+                <img src="img/pooloptions_artwall_logo.png" width="442" height="89" alt="Ground Art Wall">
               </div>
             </div>
           </div>
@@ -286,12 +292,12 @@
             </div>
           </div>
         </section>
-        <div class="more container">
+        <!-- <div class="more container">
           <a href="https://the-niwayakoubo-resortpoolgarden.jp/" target="_blank">
             詳細は『THE庭や工房リゾート』へ
             <img src="img/flow_white_arrow.png" width="7" height="12" alt="">
           </a>
-        </div>
+        </div> -->
       </div>
     </main>
 
@@ -455,11 +461,11 @@
                 <div class="tel">
                   TEL:<a class="number" href="tel:0545-67-4128">0545-67-4128</a>
                 </div>
-                <div class="icon">
+                <!-- <div class="icon">
                   <a href="https://www.instagram.com/theniwaya/" target="_blank">
                     <img src="img/top_sns_instagram.png" width="240" height="240">
                   </a>
-                </div>
+                </div> -->
               </div>
             </li>
             <li>
@@ -469,14 +475,14 @@
                 <div class="tel">
                   TEL:<a class="number" href="tel:0545-66-1515">0545-66-1515</a>
                 </div>
-                <div class="icon">
+                <!-- <div class="icon">
                   <a href="https://www.instagram.com/theniwa/" target="_blank">
                     <img src="img/top_sns_instagram.png" width="240" height="240">
                   </a>
                   <a href="https://page.line.me/?accountId=078mcrsp" target="_blank">
                     <img src="img/top_sns_line.png" width="240" height="240">
                   </a>
-                </div>
+                </div> -->
               </div>     
             </li>
             <li>
@@ -486,16 +492,30 @@
                 <div class="tel">
                   TEL:<a class="trans" href="tel:054-288-5028">054-288-5028</a>
                 </div>
-                <div class="icon">
+                <!-- <div class="icon">
                   <a href="https://page.line.me/552bvdew?openQrModal=true" target="_blank">
                     <img src="img/top_sns_line.png" width="240" height="240">
                   </a>
-                </div>
+                </div> -->
               </div>  
             </li>
             <li>
-              <div class="name">SBSマイホームセンターリフォームプラザ店</div>
-              <address>〒421-0114 静岡県静岡市駿河区桃園町1-1 1階</address>
+              <div class="name">サテライトオフィス沼津</div>
+              <address>〒000-0000　静岡県沼津市〇〇〇〇</address>
+              <div class="tel_sns">
+                <div class="tel">
+                  TEL:<a class="trans" href="tel:000-0000-0000">000-0000-0000</a>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="name">サテライトオフィス三島</div>
+              <address>〒000-0000　静岡県三島市〇〇〇〇</address>
+              <div class="tel_sns">
+                <div class="tel">
+                  TEL:<a class="trans" href="tel:000-0000-0000">000-0000-0000</a>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -515,11 +535,11 @@
               <img src="img/footer_logo_03.png" width="768" height="260" alt="">
             </a>
           </div>
-          <div class="item">
+          <!-- <div class="item">
             <a href="https://the-niwayakoubo-resortpoolgarden.jp/#">
               <img src="img/footer_logo_07.png" width="300" height="165" alt="">
             </a>
-          </div>
+          </div> -->
         </div>
         <div class="company_logo">
           <div class="lists">
@@ -532,10 +552,10 @@
             <div class="item">
               <img src="img/footer_logo_06.png" width="230" height="160" alt="">
             </div>
+            <span>
+              THE庭や工房　株式会社ベルフィオーレ
+            </span>
           </div>
-          <span>
-            THE庭や工房　株式会社ベルフィオーレ
-          </span>
         </div>
       </div>
       <div class="copyright">
@@ -568,7 +588,7 @@
         // サムネイル
         const sliderThumbnail = new Swiper(".slider-thumbnail", {
           slidesPerView: 3, // サムネイルの枚数
-          spaceBetween: 16,
+          spaceBetween: 33,
         });
 
         // スライダー
